// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AutomateNavbar /> render() should render automate navbar for admin with Automate 1`] = `
<div>
  <div
    class="sidebar"
    style="width: 238px;"
  >
    <div
      class="nav-primary hidden-panel"
    >
      <div
        class="nav-dropdown-wrapper"
      >
        <div
          class="dropdown dropdown"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="toggle btn btn-transparent"
            data-candu-id="navbar-section-automate"
            type="button"
          >
            <div>
              Automate
              <i
                class="material-icons iconMore"
              >
                arrow_drop_down
              </i>
            </div>
          </button>
          <div
            aria-hidden="true"
            class="dropdownMenu dropdown-menu"
            role="menu"
            tabindex="-1"
          >
            <a
              class="menuItem dropdownItem dropdown-item"
              role="menuitem"
              tabindex="0"
              to="/app/tickets"
            >
              <i
                class="material-icons mr-2 icon"
              >
                question_answer
              </i>
              Tickets
            </a>
            <a
              class="menuItem dropdownItem dropdown-item"
              role="menuitem"
              tabindex="0"
              to="/app/automation"
            >
              <i
                class="material-icons mr-2 icon"
              >
                bolt
              </i>
              Automate
            </a>
            <a
              class="menuItem dropdownItem dropdown-item"
              role="menuitem"
              tabindex="0"
              to="/app/convert"
            >
              <i
                class="material-icons mr-2 icon"
              >
                monetization_on
              </i>
              Convert
            </a>
            <a
              class="menuItem dropdownItem dropdown-item"
              role="menuitem"
              tabindex="0"
              to="/app/customers"
            >
              <i
                class="material-icons mr-2 icon"
              >
                people
              </i>
              Customers
            </a>
            <a
              class="menuItem dropdownItem dropdown-item"
              role="menuitem"
              tabindex="0"
              to="/app/stats"
            >
              <i
                class="material-icons mr-2 icon"
              >
                bar_chart
              </i>
              Statistics
            </a>
            <a
              class="menuItem dropdownItem dropdown-item"
              role="menuitem"
              tabindex="0"
              to="/app/settings"
            >
              <i
                class="material-icons mr-2 icon"
              >
                settings
              </i>
              Settings
            </a>
          </div>
        </div>
      </div>
      <div
        class="navbar-cta-group"
      >
        <a
          class="link link"
          data-candu-id="home-page-button"
          href="/app/home"
        >
          <span
            class="title"
          >
            <i
              class="material-icons icon"
            >
              home
            </i>
            Home
          </span>
        </a>
        <button
          aria-disabled="false"
          class="wrapper navbarButton ghost primary medium"
          id="spotlight-button-4"
          type="button"
        >
          <span
            class="content"
          >
            <span
              class="wrapper buttonIcon"
            >
              <i
                class="material-icons icon isLeft medium"
              >
                search
              </i>
            </span>
            Search
          </span>
        </button>
        <div>
          NotificationsButton
        </div>
      </div>
      <div
        class="navbar-content"
      >
        <div
          class="link-wrapper automate"
          data-candu-id="automate-link-my-automate"
        >
          <a
            class="link"
            data-active-class-name="active"
            href="/app/automation"
          >
            <span>
              Overview
            </span>
          </a>
        </div>
        <div
          class="category"
        >
          <div
            class="section section"
          >
            <div
              class="toggleSectionIconWrapper"
            >
              <i
                class="toggleSectionIcon material-icons"
              >
                arrow_drop_down
              </i>
            </div>
            <div
              class="nameWrapper"
            >
              <div
                class="iconWrapper"
              >
                <img
                  alt="shopify logo"
                  role="presentation"
                  src="/assets/img/integrations/shopify.png"
                />
              </div>
              <span
                class="name"
              >
                gorgiastest
              </span>
            </div>
          </div>
          <div
            class="link-wrapper isNested"
            data-candu-id="automate-link-ai-agent"
          >
            <a
              class="link"
              data-active-class-name="active"
              href="[object Object]"
            >
              <span
                class="item-name"
              >
                AI Agent
              </span>
              <div
                class="ui-badge-badge-7025 badge ui-badge-uppercase-7025"
                style="border-radius: 100px;"
              >
                LIVE
              </div>
            </a>
          </div>
          <div
            class="link-wrapper isNested"
            data-candu-id="automate-link-flows"
          >
            <a
              class="link"
              data-active-class-name="active"
              href="[object Object]"
            >
              <span
                class="item-name"
              >
                Flows
              </span>
            </a>
          </div>
          <div
            class="link-wrapper isNested"
            data-candu-id="automate-link-order-management"
          >
            <a
              class="link"
              data-active-class-name="active"
              href="[object Object]"
            >
              <span
                class="item-name"
              >
                Order Management
              </span>
            </a>
          </div>
          <div
            class="link-wrapper isNested"
            data-candu-id="automate-link-article-recommendation"
          >
            <a
              class="link"
              data-active-class-name="active"
              href="[object Object]"
            >
              <span
                class="item-name"
              >
                Article Recommendation
              </span>
            </a>
          </div>
          <div
            class="link-wrapper isNested"
            data-candu-id="automate-link-connected-channels"
          >
            <a
              class="link"
              data-active-class-name="active"
              href="[object Object]"
            >
              <span
                class="item-name"
              >
                Channels
              </span>
            </a>
          </div>
          <div
            class="section section"
          >
            <div
              class="toggleSectionIconWrapper"
            >
              <i
                class="toggleSectionIcon material-icons"
              >
                arrow_drop_down
              </i>
            </div>
            <div
              class="nameWrapper"
            >
              <div
                class="iconWrapper"
              >
                <img
                  alt="bigcommerce logo"
                  role="presentation"
                  src="/assets/img/integrations/bigcommerce-white.svg"
                />
              </div>
              <span
                class="name"
              >
                gorgiastest.mybigcommerce.com
              </span>
            </div>
          </div>
          <div
            class="link-wrapper isNested"
          >
            <a
              class="link"
              data-active-class-name="active"
              href="[object Object]"
            >
              <span
                class="item-name"
              >
                Flows
              </span>
            </a>
          </div>
          <div
            class="link-wrapper isNested"
          >
            <a
              class="link"
              data-active-class-name="active"
              href="[object Object]"
            >
              <span
                class="item-name"
              >
                Article Recommendation
              </span>
            </a>
          </div>
          <div
            class="link-wrapper isNested"
          >
            <a
              class="link"
              data-active-class-name="active"
              href="[object Object]"
            >
              <span
                class="item-name"
              >
                Channels
              </span>
            </a>
          </div>
        </div>
      </div>
      <div
        data-candu-id="navbar-menu-spacer"
      />
      <button
        class="dropdown-toggle dropdown-toggle-dropup"
        data-candu-id="navbar-user-menu"
      >
        <div>
          Alex Plugaru
        </div>
        <div
          class="component hasImage square"
          style="width: 36px; height: 36px;"
        >
          <div
            class="initials"
            style="width: 36px; height: 36px; font-size: 15px;"
          >
            <span
              style="line-height: 38px;"
            >
              AP
            </span>
          </div>
          <img
            alt="avatar"
            class="gravatar"
            loading="lazy"
            src="https://config.gorgias.io/production/picture"
          />
          <div
            class="badge"
            style="background-color: rgb(36, 214, 157);"
          />
        </div>
      </button>
    </div>
    <div
      class="sidebar-resizer"
    />
  </div>
</div>
`;

exports[`<AutomateNavbar /> render() should render automate navbar for admin without Automate and without legacy automate features 1`] = `
<div>
  <div
    class="sidebar"
    style="width: 238px;"
  >
    <div
      class="nav-primary hidden-panel"
    >
      <div
        class="nav-dropdown-wrapper"
      >
        <div
          class="dropdown dropdown"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="toggle btn btn-transparent"
            data-candu-id="navbar-section-automate"
            type="button"
          >
            <div>
              Automate
              <i
                class="material-icons iconMore"
              >
                arrow_drop_down
              </i>
            </div>
          </button>
          <div
            aria-hidden="true"
            class="dropdownMenu dropdown-menu"
            role="menu"
            tabindex="-1"
          >
            <a
              class="menuItem dropdownItem dropdown-item"
              role="menuitem"
              tabindex="0"
              to="/app/tickets"
            >
              <i
                class="material-icons mr-2 icon"
              >
                question_answer
              </i>
              Tickets
            </a>
            <a
              class="menuItem dropdownItem dropdown-item"
              role="menuitem"
              tabindex="0"
              to="/app/automation"
            >
              <i
                class="material-icons mr-2 icon"
              >
                bolt
              </i>
              Automate
            </a>
            <a
              class="menuItem dropdownItem dropdown-item"
              role="menuitem"
              tabindex="0"
              to="/app/convert"
            >
              <i
                class="material-icons mr-2 icon"
              >
                monetization_on
              </i>
              Convert
            </a>
            <a
              class="menuItem dropdownItem dropdown-item"
              role="menuitem"
              tabindex="0"
              to="/app/customers"
            >
              <i
                class="material-icons mr-2 icon"
              >
                people
              </i>
              Customers
            </a>
            <a
              class="menuItem dropdownItem dropdown-item"
              role="menuitem"
              tabindex="0"
              to="/app/stats"
            >
              <i
                class="material-icons mr-2 icon"
              >
                bar_chart
              </i>
              Statistics
            </a>
            <a
              class="menuItem dropdownItem dropdown-item"
              role="menuitem"
              tabindex="0"
              to="/app/settings"
            >
              <i
                class="material-icons mr-2 icon"
              >
                settings
              </i>
              Settings
            </a>
          </div>
        </div>
      </div>
      <div
        class="navbar-cta-group"
      >
        <a
          class="link link"
          data-candu-id="home-page-button"
          href="/app/home"
        >
          <span
            class="title"
          >
            <i
              class="material-icons icon"
            >
              home
            </i>
            Home
          </span>
        </a>
        <button
          aria-disabled="false"
          class="wrapper navbarButton ghost primary medium"
          id="spotlight-button-3"
          type="button"
        >
          <span
            class="content"
          >
            <span
              class="wrapper buttonIcon"
            >
              <i
                class="material-icons icon isLeft medium"
              >
                search
              </i>
            </span>
            Search
          </span>
        </button>
        <div>
          NotificationsButton
        </div>
      </div>
      <div
        class="navbar-content"
      />
      <div
        data-candu-id="navbar-menu-spacer"
      />
      <button
        class="dropdown-toggle dropdown-toggle-dropup"
        data-candu-id="navbar-user-menu"
      >
        <div>
          Alex Plugaru
        </div>
        <div
          class="component hasImage square"
          style="width: 36px; height: 36px;"
        >
          <div
            class="initials"
            style="width: 36px; height: 36px; font-size: 15px;"
          >
            <span
              style="line-height: 38px;"
            >
              AP
            </span>
          </div>
          <img
            alt="avatar"
            class="gravatar"
            loading="lazy"
            src="https://config.gorgias.io/production/picture"
          />
          <div
            class="badge"
            style="background-color: rgb(36, 214, 157);"
          />
        </div>
      </button>
    </div>
    <div
      class="sidebar-resizer"
    />
  </div>
</div>
`;

exports[`<AutomateNavbar /> render() should render automate navbar for agent with Automate 1`] = `
<div>
  <div
    class="sidebar"
    style="width: 238px;"
  >
    <div
      class="nav-primary hidden-panel"
    >
      <div
        class="nav-dropdown-wrapper"
      >
        <div
          class="dropdown dropdown"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="toggle btn btn-transparent"
            data-candu-id="navbar-section-automate"
            type="button"
          >
            <div>
              Automate
              <i
                class="material-icons iconMore"
              >
                arrow_drop_down
              </i>
            </div>
          </button>
          <div
            aria-hidden="true"
            class="dropdownMenu dropdown-menu"
            role="menu"
            tabindex="-1"
          >
            <a
              class="menuItem dropdownItem dropdown-item"
              role="menuitem"
              tabindex="0"
              to="/app/tickets"
            >
              <i
                class="material-icons mr-2 icon"
              >
                question_answer
              </i>
              Tickets
            </a>
            <a
              class="menuItem dropdownItem dropdown-item"
              role="menuitem"
              tabindex="0"
              to="/app/automation"
            >
              <i
                class="material-icons mr-2 icon"
              >
                bolt
              </i>
              Automate
            </a>
            <a
              class="menuItem dropdownItem dropdown-item"
              role="menuitem"
              tabindex="0"
              to="/app/customers"
            >
              <i
                class="material-icons mr-2 icon"
              >
                people
              </i>
              Customers
            </a>
            <a
              class="menuItem dropdownItem dropdown-item"
              role="menuitem"
              tabindex="0"
              to="/app/stats"
            >
              <i
                class="material-icons mr-2 icon"
              >
                bar_chart
              </i>
              Statistics
            </a>
            <a
              class="menuItem dropdownItem dropdown-item"
              role="menuitem"
              tabindex="0"
              to="/app/settings"
            >
              <i
                class="material-icons mr-2 icon"
              >
                settings
              </i>
              Settings
            </a>
          </div>
        </div>
      </div>
      <div
        class="navbar-cta-group"
      >
        <a
          class="link link"
          data-candu-id="home-page-button"
          href="/app/home"
        >
          <span
            class="title"
          >
            <i
              class="material-icons icon"
            >
              home
            </i>
            Home
          </span>
        </a>
        <button
          aria-disabled="false"
          class="wrapper navbarButton ghost primary medium"
          id="spotlight-button-2"
          type="button"
        >
          <span
            class="content"
          >
            <span
              class="wrapper buttonIcon"
            >
              <i
                class="material-icons icon isLeft medium"
              >
                search
              </i>
            </span>
            Search
          </span>
        </button>
        <div>
          NotificationsButton
        </div>
      </div>
      <div
        class="navbar-content"
      >
        <div
          class="link-wrapper automate"
          data-candu-id="automate-link-my-automate"
        >
          <a
            class="link"
            data-active-class-name="active"
            href="/app/automation"
          >
            <span>
              Overview
            </span>
          </a>
        </div>
        <div
          class="category"
        >
          <div
            class="section section"
          >
            <div
              class="toggleSectionIconWrapper"
            >
              <i
                class="toggleSectionIcon material-icons"
              >
                arrow_drop_down
              </i>
            </div>
            <div
              class="nameWrapper"
            >
              <div
                class="iconWrapper"
              >
                <img
                  alt="shopify logo"
                  role="presentation"
                  src="/assets/img/integrations/shopify.png"
                />
              </div>
              <span
                class="name"
              >
                gorgiastest
              </span>
            </div>
          </div>
          <div
            class="link-wrapper isNested"
            data-candu-id="automate-link-ai-agent"
          >
            <a
              class="link"
              data-active-class-name="active"
              href="[object Object]"
            >
              <span
                class="item-name"
              >
                AI Agent
              </span>
              <div
                class="ui-badge-badge-7025 badge ui-badge-uppercase-7025"
                style="border-radius: 100px;"
              >
                LIVE
              </div>
            </a>
          </div>
          <div
            class="link-wrapper isNested"
            data-candu-id="automate-link-flows"
          >
            <a
              class="link"
              data-active-class-name="active"
              href="[object Object]"
            >
              <span
                class="item-name"
              >
                Flows
              </span>
            </a>
          </div>
          <div
            class="link-wrapper isNested"
            data-candu-id="automate-link-order-management"
          >
            <a
              class="link"
              data-active-class-name="active"
              href="[object Object]"
            >
              <span
                class="item-name"
              >
                Order Management
              </span>
            </a>
          </div>
          <div
            class="link-wrapper isNested"
            data-candu-id="automate-link-article-recommendation"
          >
            <a
              class="link"
              data-active-class-name="active"
              href="[object Object]"
            >
              <span
                class="item-name"
              >
                Article Recommendation
              </span>
            </a>
          </div>
          <div
            class="link-wrapper isNested"
            data-candu-id="automate-link-connected-channels"
          >
            <a
              class="link"
              data-active-class-name="active"
              href="[object Object]"
            >
              <span
                class="item-name"
              >
                Channels
              </span>
            </a>
          </div>
          <div
            class="section section"
          >
            <div
              class="toggleSectionIconWrapper"
            >
              <i
                class="toggleSectionIcon material-icons"
              >
                arrow_drop_down
              </i>
            </div>
            <div
              class="nameWrapper"
            >
              <div
                class="iconWrapper"
              >
                <img
                  alt="bigcommerce logo"
                  role="presentation"
                  src="/assets/img/integrations/bigcommerce-white.svg"
                />
              </div>
              <span
                class="name"
              >
                gorgiastest.mybigcommerce.com
              </span>
            </div>
          </div>
          <div
            class="link-wrapper isNested"
          >
            <a
              class="link"
              data-active-class-name="active"
              href="[object Object]"
            >
              <span
                class="item-name"
              >
                Flows
              </span>
            </a>
          </div>
          <div
            class="link-wrapper isNested"
          >
            <a
              class="link"
              data-active-class-name="active"
              href="[object Object]"
            >
              <span
                class="item-name"
              >
                Article Recommendation
              </span>
            </a>
          </div>
          <div
            class="link-wrapper isNested"
          >
            <a
              class="link"
              data-active-class-name="active"
              href="[object Object]"
            >
              <span
                class="item-name"
              >
                Channels
              </span>
            </a>
          </div>
        </div>
      </div>
      <div
        data-candu-id="navbar-menu-spacer"
      />
      <button
        class="dropdown-toggle dropdown-toggle-dropup"
        data-candu-id="navbar-user-menu"
      >
        <div>
          Alex Plugaru
        </div>
        <div
          class="component hasImage square"
          style="width: 36px; height: 36px;"
        >
          <div
            class="initials"
            style="width: 36px; height: 36px; font-size: 15px;"
          >
            <span
              style="line-height: 38px;"
            >
              AP
            </span>
          </div>
          <img
            alt="avatar"
            class="gravatar"
            loading="lazy"
            src="https://config.gorgias.io/production/picture"
          />
          <div
            class="badge"
            style="background-color: rgb(36, 214, 157);"
          />
        </div>
      </button>
    </div>
    <div
      class="sidebar-resizer"
    />
  </div>
</div>
`;

exports[`<AutomateNavbar /> render() should render automate navbar for agent without Automate and without legacy automate features 1`] = `
<div>
  <div
    class="sidebar"
    style="width: 238px;"
  >
    <div
      class="nav-primary hidden-panel"
    >
      <div
        class="nav-dropdown-wrapper"
      >
        <div
          class="dropdown dropdown"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="toggle btn btn-transparent"
            data-candu-id="navbar-section-automate"
            type="button"
          >
            <div>
              Automate
              <i
                class="material-icons iconMore"
              >
                arrow_drop_down
              </i>
            </div>
          </button>
          <div
            aria-hidden="true"
            class="dropdownMenu dropdown-menu"
            role="menu"
            tabindex="-1"
          >
            <a
              class="menuItem dropdownItem dropdown-item"
              role="menuitem"
              tabindex="0"
              to="/app/tickets"
            >
              <i
                class="material-icons mr-2 icon"
              >
                question_answer
              </i>
              Tickets
            </a>
            <a
              class="menuItem dropdownItem dropdown-item"
              role="menuitem"
              tabindex="0"
              to="/app/automation"
            >
              <i
                class="material-icons mr-2 icon"
              >
                bolt
              </i>
              Automate
            </a>
            <a
              class="menuItem dropdownItem dropdown-item"
              role="menuitem"
              tabindex="0"
              to="/app/customers"
            >
              <i
                class="material-icons mr-2 icon"
              >
                people
              </i>
              Customers
            </a>
            <a
              class="menuItem dropdownItem dropdown-item"
              role="menuitem"
              tabindex="0"
              to="/app/stats"
            >
              <i
                class="material-icons mr-2 icon"
              >
                bar_chart
              </i>
              Statistics
            </a>
            <a
              class="menuItem dropdownItem dropdown-item"
              role="menuitem"
              tabindex="0"
              to="/app/settings"
            >
              <i
                class="material-icons mr-2 icon"
              >
                settings
              </i>
              Settings
            </a>
          </div>
        </div>
      </div>
      <div
        class="navbar-cta-group"
      >
        <a
          class="link link"
          data-candu-id="home-page-button"
          href="/app/home"
        >
          <span
            class="title"
          >
            <i
              class="material-icons icon"
            >
              home
            </i>
            Home
          </span>
        </a>
        <button
          aria-disabled="false"
          class="wrapper navbarButton ghost primary medium"
          id="spotlight-button-1"
          type="button"
        >
          <span
            class="content"
          >
            <span
              class="wrapper buttonIcon"
            >
              <i
                class="material-icons icon isLeft medium"
              >
                search
              </i>
            </span>
            Search
          </span>
        </button>
        <div>
          NotificationsButton
        </div>
      </div>
      <div
        class="navbar-content"
      />
      <div
        data-candu-id="navbar-menu-spacer"
      />
      <button
        class="dropdown-toggle dropdown-toggle-dropup"
        data-candu-id="navbar-user-menu"
      >
        <div>
          Alex Plugaru
        </div>
        <div
          class="component hasImage square"
          style="width: 36px; height: 36px;"
        >
          <div
            class="initials"
            style="width: 36px; height: 36px; font-size: 15px;"
          >
            <span
              style="line-height: 38px;"
            >
              AP
            </span>
          </div>
          <img
            alt="avatar"
            class="gravatar"
            loading="lazy"
            src="https://config.gorgias.io/production/picture"
          />
          <div
            class="badge"
            style="background-color: rgb(36, 214, 157);"
          />
        </div>
      </button>
    </div>
    <div
      class="sidebar-resizer"
    />
  </div>
</div>
`;
